# talking_head

./: .env.example  .gitignore  pyproject.toml  requirements.txt  run.ps1  scoktest.py  talking_head_overview.drawio  testau.py
docs/: README.md
render/: face_anim.toe  treeface_rig.fbx
src/: main.py
src/components/: __init__.py  audio2face.py  audio2face_pb2_grpc.py  audio_capture.py  audio_to_unreal_movement.py  audioplayer.py  memory.py  speech_to_text.py  text_processor.py  text_to_speech.py
src/config/: settings.py
src/controller/: __init__.py  head_controller.py
src/utils/: __init__.py  audio_utils.py  event_manager.py  generate_example_audio.py
talking_head/talking_head/: ContentView.swift  Persistence.swift  talking_headApp.swift
talking_head/talking_head.xcodeproj/: project.pbxproj
talking_head/talking_head.xcodeproj/project.xcworkspace/xcuserdata/kaspar.xcuserdatad/: UserInterfaceState.xcuserstate
talking_head/talking_head.xcodeproj/xcuserdata/kaspar.xcuserdatad/xcschemes/: xcschememanagement.plist
talking_head/talking_head/talking_head.xcdatamodeld/: .xccurrentversion
